--- a/contact.html
+++ b/contact.html
@@ -3,9 +3,9 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>About | Jess Miles</title>
-  <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
+  <title>Contact | Jess Miles</title>
   <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+  <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
